--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
 
     <string name="home">Home</string>
     <string name="favorite">Favorite</string>
-    <string name="saved_favorites">Favorites</string>
+    <string name="saved_favorites">பிடித்த குறள்கள்</string>
 
     <string name="thiruvalluvar">திருவள்ளுவர் </string>
     <string name="share_kural">Share</string>
